Fix scrollbar main

--- a/app/assets/stylesheets/users/album_homepages.scss
+++ b/app/assets/stylesheets/users/album_homepages.scss
@@ -171,6 +171,7 @@
     border: 1px solid #00000021;
     border-radius: 0 0 10px 10px;
     border-top: 0px;
+    scrollbar-width: none;
     &::-webkit-scrollbar {
       display: none;
     }
@@ -198,6 +199,7 @@
   .card {
     height: 47.2rem;
     .album_item_container {
+      scrollbar-width: none;
       &::-webkit-scrollbar {
         display: none;
       }
@@ -245,4 +247,3 @@
     }
   }
 }
-
